--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "heroku": "^7.7.8",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
